argocd/smart-home/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2025.9.2
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
          resources:  {}
      hostNetwork: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: media
          persistentVolumeClaim:
            claimName: homeassistant-media
