argocd/smart-home/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: homeassistant.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
